--- a/templates/admin/ajouter_contact.html.twig
+++ b/templates/admin/ajouter_contact.html.twig
@@ -10,7 +10,7 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+
     <span><p>Ajouter  les donnees dans le formulaire</p></span>
    
 </div>
@@ -19,7 +19,7 @@
 
 <div>
 
-{{form(formulaireContact)}}
+{{ form(formContact) }}
 
 
 
