--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,26 +1,46 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} AdminController!{{parent()}}{% endblock %}
-
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-   
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/htdocs/vitrine/vitrine/src/Controller/AdminController.php'|file_link(0) }}">src/Controller/AdminController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/htdocs/vitrine/vitrine/templates/admin/index.html.twig'|file_link(0) }}">templates/admin/index.html.twig</a></code></li>
-    </ul>
-</div>
-
-{% for contact in contacts %}
-Bonjour {{ contact.nom }} {{ contact.prenom }}<br>
-{% endfor %}
+{% block title %}
+	AdminController!{{parent()}}
 {% endblock %}
 
+{% block body %}
+	<style>
+		.example-wrapper {
+			margin: 1em auto;
+			max-width: 800px;
+			width: 95%;
+			font: 18px / 1.5 sans-serif;
+		}
+		.example-wrapper code {
+			background: #F5F5F5;
+			padding: 2px 6px;
+		}
+	</style>
 
+	<div class="example-wrapper">
+{% for notification in app.flashes('success') %}
+ <div>{{ notification }}</div>
+ {% endfor %}
+
+	
+		<ul>
+			<li>Your controller at
+				<code>
+					<a href="{{ 'C:/xampp/htdocs/vitrine/vitrine/src/Controller/AdminController.php'|file_link(0) }}">src/Controller/AdminController.php</a>
+				</code>
+			</li>
+			<li>Your template at
+				<code>
+					<a href="{{ 'C:/xampp/htdocs/vitrine/vitrine/templates/admin/index.html.twig'|file_link(0) }}">templates/admin/index.html.twig</a>
+				</code>
+			</li>
+		</ul>
+	</div>
+
+	{% for contact in contacts %}
+		Bonjour
+		{{ contact.nom }}
+		{{ contact.prenom }}<br>
+	{% endfor %}
+{% endblock %}
