--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -5,7 +5,8 @@
 {% block body %}
 <br>
 <p><a href="{{path('contact_afficher')}}">Afficher les donnees!!</a><br></p>
-<p><a href="{{path('ajouter_contact')}}">Ajouter  les donnees!!</a></p>
+<p><a href="{{path('ajouter_contact')}}">Ajouter  les donnees!!</a></p><br>
+
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
